<resources>
    <string name="app_name">Lewik</string>
    <string name="button">Auschwitz</string>
    <string name="button2">Bóg zapłać</string>
    <string name="button3">Dobranoc</string>
    <string name="button4">Dobry wieczór</string>
    <string name="button5">Dowiesz się w swoim czasie</string>
    <string name="button6">*Wieloryb*</string>
    <string name="button7">Frytki lepsze</string>
    <string name="button8">Grzybów sto</string>
    <string name="button9">Jaa?</string>
    <string name="button10">Jak za darmo...</string>
    <string name="button11">Kici kici</string>
    <string name="button12">Kiedy?</string>
    <string name="button13">Kujon</string>
    <string name="button14">Kultury byś...</string>
    <string name="button15">Lepiej nie</string>
    <string name="button16">Mama cię nie kocha</string>
    <string name="button17">Masz towar?</string>
    <string name="button18">Młodzieńcze</string>
    <string name="button19">Może jutro</string>
    <string name="button20">Naucz się kultury</string>
    <string name="button21">Nie będziemy tęsknić</string>
    <string name="button22">Nie obchodzi...</string>
    <string name="button23">Nie zgub się</string>
    <string name="button24">Niechcący</string>
    <string name="button25">Nikt cię nie kocha</string>
    <string name="button26">O Ty murzynie biały</string>
    <string name="button27">Oczywiście</string>
    <string name="button28">Odbieraj telefony...</string>
    <string name="button29">Policjant</string>
    <string name="button30">Śmierć</string>
    <string name="button31">Spokojnie</string>
    <string name="button32">Szczęść Boże</string>
    <string name="button33">Tomasz Problem</string>
    <string name="button34">Twoja stara ma małego</string>
    <string name="button35">Witaj</string>
    <string name="button36">Z bogiem</string>
    <string name="button37">Z twojej mamy</string>
    <string name="button38">Za młody jesteś</string>
    <string name="button39">Zabij się</string>
    <string name="button40">Zdrajco ojczyzny</string>
    <string name="button41">Złodziej</string>
</resources>
